<?xml version="1.0"?>
<package>
  <name>bioloid_ros_driver</name>
  <version>0.0.0</version>
  <description>Driver for Bioloid Premium Kit with CM-530 Microcontroller</description>

  <maintainer email="mderry@gmail.com">Matt Derry</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/bioloid_ros_driver</url>

  <author email="mderry@gmail.com">Matt Derry</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
