<?xml version="1.0"?>
<package>
  <name>bioloid_ros_examples</name>
  <version>0.0.1</version>
  <description>A set of example python nodes for controlling a Bioloid robot from ROS</description>

  <maintainer email="mderry@gmail.com">Matt Derry</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/bioloid_ros_examples</url>
  <author email="mderry@gmail.com">Matt Derry</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>fw_wrapper</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>fw_wrapper</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
